# BasketManCommon

./: .gitignore  100.xml  GameCoreAnimationInformation.fbs  GameCoreF4Packet.fbs  Makefile  buildInGame.sh  buildInGame_all.sh  buildInGame_normal.sh  build_enet.sh
Data/: BalanceTable.csv  BalanceTable.h  SolutionData.csv
GameCore/: BalanceData.cpp  BalanceData.h  BallControllerAPI.cpp  BallControllerAPI.h  CAnimationController.cpp  CAnimationController.h  CBallCurveInfo.cpp  CBallCurveInfo.h  CBallPool.cpp  CBallPool.h  CBallSimulationCurve.cpp  CBallSimulationCurve.h  CBallSimulator.cpp  CBallSimulator.h  CMakeLists.txt  Common.fbs  Common_generated.h  DataController.h  DataController.hpp  DataManager.h  DataManager.hpp  DataManagerBalance.cpp  DataManagerBalance.h  DataManagerShotSolution.cpp  DataManagerShotSolution.h  F4BallController.vcxproj  F4BallController.vcxproj.filters  F4Packet.fbs  F4Packet_generated.h  GameCore.vcxproj  GameCore.vcxproj.filters  JxSimulationSphere.cpp  JxSimulationSphere.h  dllmain.cpp  framework.h
GameCore/Flatbuffer/: AnimationInformation_generated.h  F4Packet_generated.h  flat.bat
GameCore/build-android-arm64/: .ninja_deps  .ninja_log  build.ninja
Host/: CMakeLists.txt  F4Host.sln
Host/3rd/enet-1.3.13/: ENetWrapper.cs  Makefile  Makefile.in  callbacks.c  compress.c  config.status  configure  encrypt.c  host.c  libtool  list.c  packet.c  peer.c  protocol.c  unix.c  win32.c
Host/3rd/enet-1.3.13/include/enet/: callbacks.h  encrypt.h  enet.h  list.h  protocol.h  time.h  types.h  unix.h  utility.h  win32.h
Host/3rd/libBuildScript/: enetBuild.sh  protobufBuild.sh
Host/build-android-arm64/: .ninja_deps  .ninja_log  build.ninja
Host/host/: Ability.cpp  Ability.h  Aimar.cpp  Aimar.h  Aldo.cpp  Aldo.h  BallController.cpp  BallController.h  CSVLoader.cpp  CSVLoader.h  CSVParser.cpp  CSVParser.h  CState_LineUp.cpp  Character.cpp  Character.h  CharacterAction.cpp  CharacterAction.h  CharacterBuff.cpp  CharacterBuff.h  CharacterManager.cpp  CharacterManager.h  CharacterMovement.cpp  CharacterMovement.h  CharacterState.cpp  CharacterState.h  CharacterState_Block.cpp  CharacterState_Block.h  CharacterState_FakeShot.cpp  CharacterState_FakeShot.h  CharacterState_Move.cpp  CharacterState_Move.h  CharacterState_Pass.cpp  CharacterState_Pass.h  CharacterState_Pick.cpp  CharacterState_Pick.h  CharacterState_Rebound.cpp  CharacterState_Rebound.h  CharacterState_Shot.cpp  CharacterState_Shot.h  CharacterState_Stand.cpp  (+197 more)
HostTest/: HostTest.sln
HostTest/HostTest/: HostTest.aps  HostTest.cpp  HostTest.h  HostTest.rc  HostTest.vcxproj  HostTest.vcxproj.filters  SolutionData.csv  resource.h
HostTest/HostTest/Include/: FileUtility.h  FtpClient.h  FtpClientDirectory.hpp  FtpClientFile.hpp  FtpClientList.hpp  FtpFile.h  FtpResponse.h  FtpStackVersion.h  Log.h  Random.h  SipPlatformDefine.h  SipTcp.h  StringMap.h  StringUtility.h  TimeString.h  TimeUtility.h
ObserverHost/: CMakeLists.txt  CObHost.cpp  CObHost.h  CObUserInfo.cpp  CObUserInfo.h  FlatBufPacket.h  FlatBufPacketImplement.h  FlatBufProtocol.cpp  HeaderDefine.h  HostDefine.h  HostEnum.h  HostStruct.h  HostTypeDefine.h  OBHostAPI.cpp  OBHostAPI.h  ObserverHost.vcxproj  ObserverHost.vcxproj.filters  PacketBase.h  PacketImplement.hpp  dllmain.cpp  framework.h
Physics/: CMakeLists.txt  ContactReport.h  F4GoalInChecker.cpp  F4GoalInChecker.h  GPSActor.cpp  GPSActor.h  ICallBackGPS2.h  ICallBackJPS.h  JBallActor.cpp  JBallActor.h  JEnviroment.h  JOMath3d.cpp  JOMath3d.h  JPSApi.cpp  JPSApi.h  JPSystem.cpp  JPSystem.h  JPhysicActor.cpp  JPhysicActor.h  JPhysics.cpp  JPhysics.h  JPlaneActor.cpp  JPlaneActor.h  JVECTOR.cpp  JVECTOR.h  JxActors.cpp  JxActors.h  JxBox.cpp  JxBox.h  JxController.cpp  JxController.h  JxControllerManager.cpp  JxControllerManager.h  JxCylinder.cpp  JxCylinder.h  JxFiPlane.cpp  JxFiPlane.h  JxField.cpp  JxField.h  JxIControllerHitReport.h  (+17 more)
Physics/build-android-arm64/: .ninja_deps  .ninja_log  build.ninja
